--- a/FlightChess/MainWindow.xaml
+++ b/FlightChess/MainWindow.xaml
@@ -47,6 +47,8 @@
             <Border Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="9" BorderThickness="0,0,0,1" BorderBrush="Black"></Border>
             <Border Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="9" BorderThickness="0,0,0,1" BorderBrush="Black"></Border>
             <Border Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="9" BorderThickness="0,0,0,1" BorderBrush="Black"></Border>
+            <Ellipse Name="ellPlayer1" Height="10" Width="10" HorizontalAlignment="Left" Margin="10" Fill="Red" Visibility="Hidden"></Ellipse>
+            <Ellipse Name="ellPlayer2" Height="10" Width="10" HorizontalAlignment="Right" Margin="10" Fill="Blue" Visibility="Hidden"></Ellipse>
         </Grid>
         <StackPanel Grid.Column="1" Grid.Row="0">
             <local:PlayerInfo x:Name="pi1" Width="394" Height="50" HorizontalAlignment="Left" VerticalAlignment="Top" ></local:PlayerInfo>
@@ -58,7 +60,7 @@
                     <RowDefinition Height="48"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Border BorderThickness="1" BorderBrush="Black" ></Border>
-                <TextBlock  Grid.Row="0" ToolTip="游戏记录" AllowDrop="True" TextWrapping="Wrap" Margin="10"></TextBlock>
+                <TextBlock Name="tbGameRecord"  Grid.Row="0" ToolTip="游戏记录" AllowDrop="True" TextWrapping="Wrap" Margin="10" ScrollViewer.CanContentScroll="True"></TextBlock>
                 <TextBox Grid.Row="1" ToolTip="消息输入框" Margin="0,11,56,9" ></TextBox>
                 <Button Grid.Row="1" Content="发送" Margin="329,10,1,10"/>
                 <Button Name="btnStart" Click="btnStart_Click" Grid.Row="2" Content="开始游戏" Margin="0,9,0,0" HorizontalAlignment="Left" Width="179"></Button>
