--- a/FlightChessClient/MainWindow.xaml
+++ b/FlightChessClient/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Name="winMain" x:Class="FlightChess.MainWindow"
+﻿<Window x:Name="winMain" x:Class="FlightChessClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FlightChess"
+        xmlns:local="clr-namespace:FlightChessClient"
         mc:Ignorable="d"
         Title="飞行棋" Height="546" Width="900" ResizeMode="CanMinimize" >
 
