--- a/FlightChess/MainWindow.xaml
+++ b/FlightChess/MainWindow.xaml
@@ -56,7 +56,7 @@
             <Grid VerticalAlignment="Center" Height="399" Margin="5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="253*"></RowDefinition>
-                    <RowDefinition Height="60*"></RowDefinition>
+                    <RowDefinition Height="auto"></RowDefinition>
                     <RowDefinition Height="40*"></RowDefinition>
                     <RowDefinition Height="auto"></RowDefinition>
                 </Grid.RowDefinitions>
@@ -64,13 +64,13 @@
                 <ScrollViewer Margin="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
                     <TextBlock Name="tbGameRecord" ScrollViewer.VerticalScrollBarVisibility="Auto" Grid.Row="0" ToolTip="游戏记录" AllowDrop="True" TextWrapping="Wrap" Margin="5"></TextBlock>
                 </ScrollViewer>
-                <TextBox Name="tbMsg" Grid.Row="1" ToolTip="消息输入框" Margin="0,11,56,9" ></TextBox>
+                <TextBox Name="tbMsg" MinHeight="40" Grid.Row="1" ToolTip="消息输入框" Margin="0,11,56,9" ></TextBox>
                 <Button Name="btnSend" Grid.Row="1" Content="发送" Margin="329,10,1,10" Click="btnSend_Click"/>
-                <Button Name="btnStart" Click="btnStart_Click" Grid.Row="2" Content="开始游戏" Margin="0,6,0,3" HorizontalAlignment="Left" Width="179" Background="#FF64FF32"></Button>
-                <Button IsEnabled="False" Name="btnPlay" Grid.Row="2" Content="掷色子" Margin="0,6,7,3" HorizontalAlignment="Right" Width="176" Click="btnPlay_Click"></Button>
-                <TextBox x:Name="txtIP" HorizontalAlignment="Left" Height="30" Margin="0,13,0,0" Grid.Row="3" TextWrapping="Wrap" Text="127.0.0.1" VerticalAlignment="Top" Width="198"/>
-                <TextBox x:Name="txtPort" HorizontalAlignment="Left" Height="30" Margin="218,13,0,0" Grid.Row="3" TextWrapping="Wrap" Text="5151" VerticalAlignment="Top" Width="44"/>
-                <Button x:Name="btnListen" Content="开始监听" HorizontalAlignment="Left" Margin="295,10,0,0" Grid.Row="3" VerticalAlignment="Top" Width="75" Height="33" Click="btnListen_Click"/>
+                <Button Name="btnStart" Click="btnStart_Click" Grid.Row="2" Content="开始游戏" Margin="0,6,0,3" HorizontalAlignment="Left" Width="182" Background="#FF64FF32"></Button>
+                <Button IsEnabled="False" Name="btnPlay" Grid.Row="2" Content="掷色子" Margin="0,6,1,3" HorizontalAlignment="Right" Width="187" Click="btnPlay_Click"></Button>
+                <TextBox x:Name="txtIP" HorizontalAlignment="Left" Height="30" Margin="0,10,0,0" Grid.Row="3" TextWrapping="Wrap" Text="127.0.0.1" VerticalAlignment="Top" Width="182" FontSize="21.333"/>
+                <TextBox x:Name="txtPort" HorizontalAlignment="Left" Height="30" Margin="193,10,0,0" Grid.Row="3" TextWrapping="Wrap" Text="5151" VerticalAlignment="Top" Width="82" FontSize="21.333"/>
+                <Button x:Name="btnListen" Content="开始监听" HorizontalAlignment="Left" Margin="292,10,0,0" Grid.Row="3" VerticalAlignment="Top" Width="86" Height="30" Click="btnListen_Click"/>
             </Grid>
         </StackPanel>
     </Grid>
