--- a/FlightChess/MainWindow.xaml
+++ b/FlightChess/MainWindow.xaml
@@ -68,7 +68,7 @@
                 <Button Name="btnSend" Grid.Row="1" Content="发送" Margin="329,10,1,10" Click="btnSend_Click"/>
                 <Button Name="btnStart" Click="btnStart_Click" Grid.Row="2" Content="开始游戏" Margin="0,6,0,3" HorizontalAlignment="Left" Width="182" Background="#FF64FF32"></Button>
                 <Button IsEnabled="False" Name="btnPlay" Grid.Row="2" Content="掷色子" Margin="0,6,1,3" HorizontalAlignment="Right" Width="187" Click="btnPlay_Click"></Button>
-                <TextBox x:Name="txtIP" HorizontalAlignment="Left" Height="30" Margin="0,10,0,0" Grid.Row="3" TextWrapping="Wrap" Text="127.0.0.1" VerticalAlignment="Top" Width="182" FontSize="21.333"/>
+                <TextBox IsEnabled="False" x:Name="txtIP" HorizontalAlignment="Left" Height="30" Margin="0,10,0,0" Grid.Row="3" TextWrapping="Wrap" Text="127.0.0.1" VerticalAlignment="Top" Width="182" FontSize="21.333"/>
                 <TextBox x:Name="txtPort" HorizontalAlignment="Left" Height="30" Margin="193,10,0,0" Grid.Row="3" TextWrapping="Wrap" Text="5151" VerticalAlignment="Top" Width="82" FontSize="21.333"/>
                 <Button x:Name="btnListen" Content="开始监听" HorizontalAlignment="Left" Margin="292,10,0,0" Grid.Row="3" VerticalAlignment="Top" Width="78" Height="30" Click="btnListen_Click"/>
             </Grid>
