--- a/FlightChessClient/PlayerInfo.xaml
+++ b/FlightChessClient/PlayerInfo.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Ellipse Name="ellAvatar" Margin="5,5,349,5" Width="40" Height="40" Fill="#FF0097FF"></Ellipse>
         <TextBlock Text="昵称" HorizontalAlignment="Left" VerticalAlignment="Top" Width="30" Height="15" Margin="50,8,0,0"></TextBlock>
-        <TextBox x:Name="txtPlayerName" HorizontalAlignment="Left" VerticalAlignment="Top" Width="260" Height="18" Margin="80,5,0,0"></TextBox>
+        <TextBox BorderThickness="0" x:Name="txtPlayerName" HorizontalAlignment="Left" VerticalAlignment="Top" Width="260" Height="18" Margin="80,8,0,0"></TextBox>
         <TextBlock Margin="50,28,0,0" Text="位置" Height="15" Width="30" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <TextBlock x:Name="txtPo" Text="0" Height="15" Width="260" Margin="80,28,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Grid>
