--- a/FlightChess/MainWindow.xaml
+++ b/FlightChess/MainWindow.xaml
@@ -23,6 +23,7 @@
                 <ColumnDefinition Width="1*"></ColumnDefinition>
                 <ColumnDefinition Width="1*"></ColumnDefinition>
                 <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"></RowDefinition>
@@ -50,7 +51,7 @@
             <Ellipse Name="ellPlayer2" Height="10" Width="10" HorizontalAlignment="Right" Margin="10" Fill="Blue" Visibility="Hidden"></Ellipse>
         </Grid>
         <StackPanel Grid.Column="1" Grid.Row="0">
-            <local:PlayerInfo x:Name="pi1" Width="394" Height="50" HorizontalAlignment="Left" VerticalAlignment="Center" ></local:PlayerInfo>
+            <local:PlayerInfo LostFocus="pi1_LostFocus" x:Name="pi1" Width="394" Height="50" HorizontalAlignment="Left" VerticalAlignment="Center" ></local:PlayerInfo>
             <local:PlayerInfo x:Name="pi2" Width="394" Height="50" HorizontalAlignment="Left" VerticalAlignment="Center" ></local:PlayerInfo>
             <Grid VerticalAlignment="Center" Height="399" Margin="5">
                 <Grid.RowDefinitions>
@@ -60,7 +61,7 @@
                     <RowDefinition Height="auto"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Border BorderThickness="1" BorderBrush="Black" ></Border>
-                <ScrollViewer Margin="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+                <ScrollViewer Margin="2" VerticalScrollBarVisibility="Auto">
                     <TextBlock Name="tbGameRecord" ScrollViewer.VerticalScrollBarVisibility="Auto" Grid.Row="0" ToolTip="游戏记录" AllowDrop="True" TextWrapping="Wrap" Margin="2"></TextBlock>
                 </ScrollViewer>
                 <Grid>
@@ -71,9 +72,9 @@
                 <Button Name="btnStart" Click="btnStart_Click" Grid.Row="2" Content="开始游戏" Margin="0,6,0,3" HorizontalAlignment="Left" Width="182" Background="#FF64FF32"></Button>
                 <Button IsEnabled="False" Name="btnPlay" Grid.Row="2" Content="掷色子" Margin="0,6,1,3" HorizontalAlignment="Right" Width="187" Click="btnPlay_Click"></Button>
                 <TextBox x:Name="txtIP" HorizontalAlignment="Left" Height="30" Margin="0,10,0,0" Grid.Row="3" TextWrapping="Wrap" Text="127.0.0.1" VerticalAlignment="Top" Width="127" FontSize="21.333"/>
-                <TextBox x:Name="txtPort" HorizontalAlignment="Left" Height="30" Margin="132,10,0,0" Grid.Row="3" TextWrapping="Wrap" Text="5151" VerticalAlignment="Top" Width="82" FontSize="21.333"/>
-                <Button x:Name="btnListen" Content="监听" HorizontalAlignment="Left" Margin="219,10,0,0" Grid.Row="3" VerticalAlignment="Top" Width="78" Height="30" Click="btnListen_Click"/>
-                <Button x:Name="btnLink" Content="连接" HorizontalAlignment="Left" Margin="299,10,0,0" Grid.Row="3" VerticalAlignment="Top" Width="78" Height="30" Click="btnLink_Click"/>
+                <TextBox x:Name="txtPort" HorizontalAlignment="Left" Height="30" Margin="129,10,0,0" Grid.Row="3" TextWrapping="Wrap" Text="5151" VerticalAlignment="Top" Width="82" FontSize="21.333"/>
+                <Button x:Name="btnListen" Content="监听" HorizontalAlignment="Left" Margin="214,10,0,0" Grid.Row="3" VerticalAlignment="Top" Width="78" Height="30" Click="btnListen_Click"/>
+                <Button x:Name="btnLink" Content="连接" HorizontalAlignment="Left" Margin="295,10,0,0" Grid.Row="3" VerticalAlignment="Top" Width="78" Height="30" Click="btnLink_Click"/>
 
             </Grid>
         </StackPanel>
